[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "python data analytics"
authors = ["Nikita Kistankin <necorectno@mail.ru>"]
readme = "README.md"
packages = [{include = "conversion_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.14"
matplotlib = "3.8.0"
requests = "2.31.0"
python-dotenv = "0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
